Adding clear instruction on field before new scenario to avoid wrong field  input